--- a/projects/index.html
+++ b/projects/index.html
@@ -53,23 +53,22 @@
             <h3 style="float: right; right: 4px;">Suitcase-Computer</h3>
             <p>1 day</p>
             <ol class="playlist_info">
-                <li>Revolting Cocks - We Shall Cleanse the World</li>
-                <li>Skinny Puppy - Far Too Frail</li>
-                <li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
-                <li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
-                <li>Randolph &amp; Mortimer - Citizens</li>
-                <li>Cubanate - Split Second</li>
-                <li>Celldweller - Switchback</li>
-                <li>Acumen Nation - Coming Down</li>
-                <li>Test Dept - Pulsations 1 (Human Run)</li>
-                <li>Nitzer Ebb - Alarm</li>
-                <li>Cubanate - Oxyacetylene</li>
-                <li>KMFDM - Liebeslied (Edit)</li>
-                <li>ohGr - Suhleap</li>
+                <li>Desktop cases, desktop cases</li>
+                <li>small-tower, mid-tower, tower</li>
+                <li>they're called pc's right? portable computers?</li>
+                <li>a suitcase is a perfect fit</li>
+                <li>a project that was planned, purchased, and executed</li>
+                <li>in under 4 hours</li>
+                <li>a computer a "acquired" from my school</li>
+                <li>tape, wire, scissors, wire cutter, flashlight</li>
+                <li>not all of these are needed.</li>
+                <li>also every piece of a computer</li>
+                <li>holes weren't cut very well</li>
+                <li>Completed - (for now)</li>
             </ol>
 
             <div class="label">
-                <p><a href="/projects/placeholder">Read More</a></p>
+                <p><a href="/projects/uc">Read More</a></p>
             </div>
         </div>
 
@@ -94,32 +93,32 @@
 								</ol>
 
 								<div class="label">
-										<p><a href="/projects/placeholder">Read Less</a></p>
+										<p><a href="/projects/placeholder">Look More</a></p>
 								</div>
 						</div>
 
 						<div id="content">
 										<img class="auditorium" src="../images/projects/deskless/Deskless.png" style="width: 250px;"/>
-										<h3 style="float: right; right: 4px;">Suitcase-Computer</h3>
-										<p>1 day</p>
+										<h3 style="float: right; right: 4px;">Deskless-Kbd-Mouse</h3>
+										<p>1 day (142)</p>
 										<ol class="playlist_info">
-												<li>Revolting Cocks - We Shall Cleanse the World</li>
-												<li>Skinny Puppy - Far Too Frail</li>
-												<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
-												<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
-												<li>Randolph &amp; Mortimer - Citizens</li>
-												<li>Cubanate - Split Second</li>
-												<li>Celldweller - Switchback</li>
-												<li>Acumen Nation - Coming Down</li>
-												<li>Test Dept - Pulsations 1 (Human Run)</li>
-												<li>Nitzer Ebb - Alarm</li>
-												<li>Cubanate - Oxyacetylene</li>
-												<li>KMFDM - Liebeslied (Edit)</li>
-												<li>ohGr - Suhleap</li>
+												<li>So who needs a desk anyway?</li>
+												<li>Tired of wasting space with a desk?</li>
+												<li>I wasn't, but i made a deskless setup anyway</li>
+												<li>Inspired by u/HardAsMagnets</li>
+												<li>Parts acquired from mostly amazon</li>
+												<li>Kailh Choc Switches</li>
+												<li>Keycaps that fit</li>
+												<li>PCB, Switches, And Caps: https://www.gboards.ca/</li>
+												<li>Who has also supplied me with many other goods</li>
+												<li>Also just a tripod</li>
+												<li>3d printed case for georgi</li>
+												<li>Stenography for all</li>
+												<li>Completed</li>
 										</ol>
 
 										<div class="label">
-												<p><a href="/projects/placeholder">Read More</a></p>
+												<p><a href="/projects/uc">Read More</a></p>
 										</div>
 								</div>
 
@@ -128,23 +127,21 @@
 						            <h3 style="float: right; right: 4px;">Hanwired-Numpad</h3>
 						            <p>1 day</p>
 						            <ol class="playlist_info">
-						                <li>Revolting Cocks - We Shall Cleanse the World</li>
-						                <li>Skinny Puppy - Far Too Frail</li>
-						                <li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
-						                <li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
-						                <li>Randolph &amp; Mortimer - Citizens</li>
-						                <li>Cubanate - Split Second</li>
-						                <li>Celldweller - Switchback</li>
-						                <li>Acumen Nation - Coming Down</li>
-						                <li>Test Dept - Pulsations 1 (Human Run)</li>
-						                <li>Nitzer Ebb - Alarm</li>
-						                <li>Cubanate - Oxyacetylene</li>
-						                <li>KMFDM - Liebeslied (Edit)</li>
-						                <li>ohGr - Suhleap</li>
+						                <li>A 17 key numpad</li>
+						                <li>Hand-wired with just your run of the mill wire</li>
+						                <li>Maxkey SA Chocolate keycaps</li>
+						                <li>With Navy Accents</li>
+						                <li>Arduino Pro Micro</li>
+						                <li>Programmed with QMK</li>
+						                <li>Layout as shown</li>
+						                <li>3d printed shell</li>
+						                <li>Designed by me</li>
+						                <li>White PLA filament</li>
+														<li>Completed</li>
 						            </ol>
 
 						            <div class="label">
-						                <p><a href="/projects/placeholder">Read More</a></p>
+						                <p><a href="/projects/uc">Read More</a></p>
 						            </div>
 						        </div>
 
