--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
-  	<a href="new.html" class="navi"><img src="images/nav/flow.png">bio</a>
-		<a href="kao.html" class="navi"><img src="images/nav/flow.png">chat</a>
-		  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">reference</a>
+  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">bio</a>
+		<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">chat</a>
+		  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">reference</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
-    <a href="blinkies.html" class="navi"><img src="images/nav/flow.png">ani-notes</a>
-    <a href="links.html" class="navi"><img src="images/nav/flow.png">code</a>
-    <a href="videogames.html" class="navi"><img src="images/nav/flow.png">video-games</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">ani-notes</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">code</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">video-games</a>
 
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
-    <a href="jotaro.html" class="navi"><img src="images/nav/flow.png">video</a>
-    <a href="art.html" class="navi"><img src="images/nav/flow.png">art</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">video</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">art</a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-  	<a href="videos.html" class="navi"><img src="images/nav/flow.png">videos</a>
+  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">videos</a>
 
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
