--- a/projects/numpad/index.html
+++ b/projects/numpad/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News...</title>
+    <title>「ｒｅ：Ｌｉｖｅ」</title>
+    <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
     <link href="entry.css" rel="stylesheet" type="text/css" media="all">
     <style>
     body {
@@ -18,21 +19,21 @@
     <div id="content_container">
       <div id="content">
         <div class="main">
-                <img src="../../images/home/ddd.gif" width="70%">
-                <p>the other night, i dreamt i had a cloak that let me fly on the wind like a leaf</p>
-                <p>but i had an angry father who could fly, too</p>
-                <p>while i was entertaining a group of nomads in the forest, he came for me with his two swords, as i'd abandoned the military he helmed</p>
-                <br>
-                <p>we fought, gliding over the water. he smashed my rapier. i broke off the blade of his sword and stabbed him in the lungs with it, dropping him into the ocean below.</p>
-                <p>...winning the battle was so cool that i woke up immediately!</p><br>
-                <p>now, a quick update on my analytics...</p>
-                <img src="/images/site_graphics/3-29-19-news.gif" width="70%"><br>
-                <img src="/images/site_graphics/3-29-19-news.png" width="70%">
-                <p>yeah, the numbers are still off like a week later. either neocities sucks, or google analytics sucks. (or both!)</p>
-                <p>not only that, but <b><em>78</em></b> of those views are the same entity, using firefox, from the same place in nyc, with a bounce rate of 100%. i have bots and myself blacklisted from the results (and i don't even use firefox), so i have no idea what that is. i'm <em>guessing</em> it might be neocities' server taking the pictures when i update the site.</p>
-                <p>otherwise, the info is kind of pointless? its interesting to see where people visit and for how long, but with such a low sample size, there isn't much of a reason to have it. not to mention the fact that it isn't even gathering demographic data on gender and age, despite that feature being enabled.</p>
-                <p>anyway, i guess the upside is that i can get rid of the analytics without missing out on anything. i'll leave it on for another week or two just to see how it goes, and then chuck it in the trash.</p>
-                <p>well, that's it today. ciao! 🐰🐰🐰🐰</p>
+                <br><h2>HANWIRED NUMPAD </h2><br>
+                <img src="../../images/projects/numpad/1.png" width="400px"><br><br>
+                <h1>Beginnings</h1><br>
+                <p>i've been building keyboards for months and months at this point (hopefully i have done write ups ex post facto) and i wanted
+                to fully handwire, 3d print, and program my own keyboards. i had been reading up on what to do and buying tools to achieve this goal
+                but instead pursued frivelous 'projects' and dallied about. i eventually got tired of this and on one of my days off of work, decided
+                after school, i would 3d print, handwire, and program a keypad in a single day. This is the knowledge, hardware, and process that went into that.
+                documenting this is hopefully interesting or helpful to you if you want to follow along yourself.</p>
+                <br><h1>Hardware</h1><br>
+                <!--
+                <img src="../../images/projects/numpad/2.jpg" width="70%">
+                <img src="../../images/projects/numpad/3.jpg" width="70%">  -->
+                <p>things you will knead:</p>
+                <p>╠ arduino pro micro (or any teensy variant)</p>
+                <p>╧ link:</p>
         </div>
       </div>
     </div>
