--- a/projects/index.html
+++ b/projects/index.html
@@ -141,7 +141,7 @@
 						            </ol>
 
 						            <div class="label">
-						                <p><a href="/projects/uc">Read More</a></p>
+						                <p><a href="/projects/numpad">Read More</a></p>
 						            </div>
 						        </div>
 
