--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
-  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">bio</a>
+  	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">chat</a>
 		  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">reference</a>
 
@@ -64,6 +64,13 @@
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">1/28/20 </h3>
+          <p style="margin-bottom:30px;">pr[]ductivity skyr[]ckets with l[]gs</p>
+        </div>
+
 				<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/17/20 <img src="images/nav/flow.png" class="new"></h3>
@@ -72,7 +79,7 @@
 
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
-          <h3 style="margin-bottom:10px;">m1/8/20 </h3>
+          <h3 style="margin-bottom:10px;">1/8/20 </h3>
           <p style="margin-bottom:30px;">physical reality is nothing but a sneaky ninja</p>
         </div>
 
@@ -122,7 +129,7 @@
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
-          <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
+          <p style="margin-bottom:30px;">welcøme to ren's riøt of a web space—my øfficial webring tø a(rt)nime.</p>
         </div>
 
         <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
