--- a/projects/numpad/index.html
+++ b/projects/numpad/index.html
@@ -33,7 +33,7 @@
                 <img src="../../images/projects/numpad/3.jpg" width="70%">  -->
                 <p>things you will knead:</p>
                 <p>╠ arduino pro micro (or any teensy variant)</p>
-                <p>╧ link:</p>
+                <p>╧ link: [unfished... ill try my best to finish soon]</p>
         </div>
       </div>
     </div>
