--- a/projects/index.html
+++ b/projects/index.html
@@ -35,6 +35,7 @@
             <h1>Project Logs</h1>
         </div>
 
+
         <div id="content">
             <p>
                 Project Central! All/Most/MaybeAFew of the projects i'm working on will be logged here.
@@ -46,7 +47,11 @@
 								stars, too, have their own beginnings, but their own power results in their destruction.
             </p>
         </div>
-
+				<div id="content2">
+								<div class="label2">
+										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
+								</div>
+						</div>
 
 		<div id="content">
             <img class="auditorium" src="../images/projects/suitcase/Suitcase.png" style="width: 250px;"/>
@@ -59,16 +64,16 @@
                 <li>a suitcase is a perfect fit</li>
                 <li>a project that was planned, purchased, and executed</li>
                 <li>in under 4 hours</li>
-                <li>a computer a "acquired" from my school</li>
+                <li>a computer i "acquired" from my school</li>
                 <li>tape, wire, scissors, wire cutter, flashlight</li>
                 <li>not all of these are needed.</li>
                 <li>also every piece of a computer</li>
                 <li>holes weren't cut very well</li>
-                <li>Completed - (for now)</li>
+                <li>[Completed] - (for now)</li>
             </ol>
 
             <div class="label">
-                <p><a href="/projects/uc">Read More</a></p>
+                <p><a href="/projects/uc">Read Soon</a></p>
             </div>
         </div>
 
@@ -114,7 +119,7 @@
 												<li>Also just a tripod</li>
 												<li>3d printed case for georgi</li>
 												<li>Stenography for all</li>
-												<li>Completed</li>
+												<li>[Completed]</li>
 										</ol>
 
 										<div class="label">
@@ -137,7 +142,7 @@
 						                <li>3d printed shell</li>
 						                <li>Designed by me</li>
 						                <li>White PLA filament</li>
-														<li>Completed</li>
+														<li>[Completed]</li>
 						            </ol>
 
 						            <div class="label">
@@ -146,7 +151,7 @@
 						        </div>
 
         <div id="site_entry">
-            <p>[ <a href="#">BACK TO TOP</a> ]</p>
+            <p>[ <a href="#">Back to Top</a> ]</p>
         </div>
     </div>
 </body>
