--- a/projects/numpad/index.html
+++ b/projects/numpad/index.html
@@ -25,15 +25,28 @@
                 <p>i've been building keyboards for months and months at this point (hopefully i have done write ups ex post facto) and i wanted
                 to fully handwire, 3d print, and program my own keyboards. i had been reading up on what to do and buying tools to achieve this goal
                 but instead pursued frivelous 'projects' and dallied about. i eventually got tired of this and on one of my days off of work, decided
-                after school, i would 3d print, handwire, and program a keypad in a single day. This is the knowledge, hardware, and process that went into that.
+                after school, i would 3d print, handwire, and program a keypad in a single day. this is the knowledge, hardware, and process that went into that.
                 documenting this is hopefully interesting or helpful to you if you want to follow along yourself.</p>
                 <br><h1>Hardware</h1><br>
                 <!--
                 <img src="../../images/projects/numpad/2.jpg" width="70%">
                 <img src="../../images/projects/numpad/3.jpg" width="70%">  -->
                 <p>things you will knead:</p>
-                <p>╠ arduino pro micro (or any teensy variant)</p>
-                <p>╧ link: [unfished... ill try my best to finish soon]</p>
+                <p>> arduino pro micro (or any teensy variant)</p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> key switches (gateron silver)</p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> 3d printer (creality cr-10s)</p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> printer filament (white)</p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> </p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> </p>
+                <p><a href="" target="_blank">[link]</a></p>
+                <p>> </p>
+                <p><a href="" target="_blank">[link]</a></p>
+                
         </div>
       </div>
     </div>
