--- a/projects/deskless/index.html
+++ b/projects/deskless/index.html
@@ -27,12 +27,9 @@
                 documenting this is hopefully interesting or helpful to you if you want to follow along yourself.</p>
                 <br><h1>Hardware</h1><br>
                 <p>things you will knead:</p>
-                <p>> gero</p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> </p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> </p>
-                <p><a href="" target="_blank">[link]</a></p>
+                <p><a href="" target="_blank"> > gergo < </a></p>
+                <p><a href="" target="_blank"> >  < </a></p>
+                <p><a href="" target="_blank"> >  < </a></p>
         </div>
       </div>
     </div>
