--- a/projects/numpad/index.html
+++ b/projects/numpad/index.html
@@ -31,22 +31,13 @@
                 <!--
                 <img src="../../images/projects/numpad/2.jpg" width="70%">
                 <img src="../../images/projects/numpad/3.jpg" width="70%">  -->
-                <p>things you will knead:</p>
-                <p>> arduino pro micro (or any teensy variant)</p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> key switches (gateron silver)</p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> 3d printer (creality cr-10s)</p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> printer filament (white)</p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> </p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> </p>
-                <p><a href="" target="_blank">[link]</a></p>
-                <p>> </p>
-                <p><a href="" target="_blank">[link]</a></p>
-                
+                <p>things you will knead (links from where i bought included):</p>
+                <p><a href="" target="_blank">> arduino pro micro (or any teensy variant) <</a></p>
+                <p><a href="" target="_blank">> key switches (gateron silver) <</a></p>
+                <p><a href="" target="_blank">> 3d printer (creality cr-10s <</a></p>
+                <p><a href="" target="_blank">> printer filament (white) <</a></p>
+                <p><a href="" target="_blank"> >  < </a></p>
+                <p><a href="" target="_blank"> >  < </a></p>
         </div>
       </div>
     </div>
