--- a/projects/deskless/index.html
+++ b/projects/deskless/index.html
@@ -19,17 +19,16 @@
     <div id="content_container">
       <div id="content">
         <div class="main">
-                <br><h2>Deskless Kbd-Mouse</h2><br>
-                <img src="../../images/projects/deskless/Deskless.png" width="400px"><br><br>
+                <br><h2>Deskless Kbd-Mouse</h2><br><br>
+                <img src="../../images/projects/deskless/5.jpg" width="400px"><br><br>
                 <h1>Beginnings</h1><br>
                 <p>reddit, where all good inspiration starts (besides p*nterest but we don't talk about that.)
-                i saw a post by u/HardAsMagnets, and immediately i knew i needed one. this is the knowledge, hardware, and process that went into that.
-                documenting this is hopefully interesting or helpful to you if you want to follow along yourself.</p>
-                <br><h1>Hardware</h1><br>
-                <p>things you will knead:</p>
-                <p><a href="" target="_blank"> > gergo < </a></p>
-                <p><a href="" target="_blank"> >  < </a></p>
-                <p><a href="" target="_blank"> >  < </a></p>
+                i saw a post by u/HardAsMagnets, and immediately i knew i needed one.
+                i will not be documenting my personal process, instead check out Martin Körner's guide, which i followed to a T:</p>
+                <p><a href="" target="_blank">> Martin Körners Guide <</a></p>
+                <br><h1>Pics</h1><br>
+                <br><p><img src="../../images/projects/deskless/2.jpg" width="400px"></p><br>
+                <br><p><img src="../../images/projects/deskless/1.jpg" width="400px"></p><br>
         </div>
       </div>
     </div>
