--- a/projects/index.html
+++ b/projects/index.html
@@ -123,7 +123,7 @@
 										</ol>
 
 										<div class="label">
-												<p><a href="/projects/uc">Read More</a></p>
+												<p><a href="/projects/deskless">Read More</a></p>
 										</div>
 								</div>
 
