--- a/music/index.html
+++ b/music/index.html
@@ -81,7 +81,9 @@ div#all {
   overflow: hidden;
   position: relative;
   text-align: center;
-  box-shadow: 1px 1px 2px #808080;
+  -webkit-box-shadow: 0 8px 4px 2px #999999;
+  -moz-box-shadow: 0 8px 4px 2px #999999;
+  box-shadow: 0 0 4px 2px #999999;
   cursor: default;
   background: #fff url() no-repeat center center
 }
@@ -365,6 +367,8 @@ div#all {
 
     </div>
   </div>
+
+
   <div class="view view-first">
     <img src="../images/albulm/coshunie1.jpg">
     <div class="mask">
@@ -372,6 +376,161 @@ div#all {
       <p>Favorite songs: Asphyxia, Defection, Character</p>
 
     </div>
+  </div>
+
+  <div class="view view-first">
+    <img src="../images/albulm/asas.jpg">
+    <div class="mask">
+      <h2>Lemon Demon - Spirit Phone (2016)</h2>
+      <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+    </div>
+  </div>
+
+
+  <div class="view view-first">
+    <img src="../images/albulm/aa.jpg">
+    <div class="mask">
+      <h2>My Chemical Romance - Three Cheers For Sweet Revenge (2004)</h2>
+      <p>Favorite songs: You Know What They Do To Guys Like Us In Prison, Hang 'Em High</p>
+
+    </div>
+  </div>
+
+
+
+  <div class="view view-first">
+    <img src="../images/albulm/a.jpg">
+    <div class="mask">
+      <h2>Twenty One Pilots - Vessel (2013)</h2>
+      <p>Favorite songs: Holding On To You, Migraine, Ode To Sleep, Car Radio, Guns for Hands</p>
+
+    </div>
+  </div>
+
+
+    <div class="view view-first">
+      <img src="../images/albulm/1.jpg">
+      <div class="mask">
+        <h2>Tally Hall - Marvin's Marvelous Mechanical Museum (2005)</h2>
+        <p>Favorite songs: Greener, Taken for a Ride, The Bidding, Just Apathy, Two Wuv, Haiku, Hidden In The Sand</p>
+
+      </div>
+    </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/z.jpg">
+        <div class="mask">
+          <h2>DM Dokuro - UNDERTALE: The Underground Radio (2016)</h2>
+          <p>Favorite songs: g a r d e n, SAVE, Reality Check Through The Skull, COMMON CORE</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/x.jpg">
+        <div class="mask">
+          <h2>Jin - Mekacuity Records (2013)</h2>
+          <p>Favorite songs: Children Record (Re Ver.), Outer Science, Lost Time Memory</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/v.jpg">
+        <div class="mask">
+          <h2>Cavetown - Cavetown (2015)</h2>
+          <p>Favorite songs: Untitled V.2, Devil Town</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/q.png">
+        <div class="mask">
+          <h2>REOL - Sigma (2016)</h2>
+          <p>Favorite songs: YoiYoi Kokon, -FINAL SIGMA-</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/s.jpg">
+        <div class="mask">
+          <h2>Vivid Undress - Vivid Undress (2018)</h2>
+          <p>Favorite songs: SAYONARA DILEMMA, WATASHI MENHERA NANKAJA NAIMON, IKITE IKITE</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/f.jpg">
+        <div class="mask">
+          <h2>Sasakure.uk - UNIQTRAP (2017)</h2>
+          <p>Favorite songs: Start Menu (Undefined Remix), Hopes and Dreams (Alterego Remix)</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Lemon Demon - Spirit Phone (2016)</h2>
+          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+
+        </div>
+      </div>
+
+
+
+
   </div>
 
 
