--- a/music/index.html
+++ b/music/index.html
@@ -474,19 +474,19 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/ss.jpg">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Dave Days - Boy You'll Forget (2013)</h2>
+          <p>Favorite songs: Boy You'll Forget, East To West (Bonus Track)</p>
 
         </div>
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/gf.jpg">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Radwimps - Kimi No Na Wa OST (2016)</h2>
+          <p>Favorite songs: Zen Zen Zense (Movie Version), Sparkle (Movie Version), Nandemonaiya (Movie Edit)</p>
 
         </div>
       </div>
