--- a/music/index.html
+++ b/music/index.html
@@ -492,38 +492,38 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/qq.png">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Death Cab For Cutie - Plans (2005)</h2>
+          <p>Favorite songs: Soul Meets Body, I Will Follow You Into The Dark, Crooked Teeth</p>
 
         </div>
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/aaa.jpg">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Coyote Theory - Color (2011)</h2>
+          <p>Favorite songs: This Side Of Paradise, The Ruse & The Caper</p>
 
         </div>
       </div>
 
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/fd.jpg">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Eden - I Think You Think To Much Of Me (2016)</h2>
+          <p>Favorite songs: Sex, Drugs, Rock + Roll, XO, Circle</p>
 
         </div>
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/.jpg">
+        <img src="../images/albulm/fdfd.jpg">
         <div class="mask">
-          <h2>Lemon Demon - Spirit Phone (2016)</h2>
-          <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
 
         </div>
       </div>
