--- a/music/index.html
+++ b/music/index.html
@@ -356,7 +356,7 @@ div#all {
   </head>
   <body>
 <center><h1 style="font-family: myfont2;font-size:44px;text-shadow: -1px 0 #000000, 0 1px #000, 1px 0 #000, 0 -1px #000;">re:Live / Music</h1>
-  <h1 style="font-family: ebit;font-size:14px;text-shadow: -1px 0 #000000, 0 1px #000, 1px 0 #000, 0 -1px #000;">here's some music i like:</h1>
+  <h1 style="font-family: ebit;font-size:14px;text-shadow: -1px 0 #000000, 0 1px #000, 1px 0 #000, 0 -1px #000;">here's some music i like (in no particular order):</h1>
   <div id="all">
 
   <div class="view view-first">
@@ -382,7 +382,7 @@ div#all {
     <img src="../images/albulm/asas.jpg">
     <div class="mask">
       <h2>Lemon Demon - Spirit Phone (2016)</h2>
-      <p>Favorite songs: Touch Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
+      <p>Favorite songs: Life Time Achievement Award, Touch-Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
 
     </div>
   </div>
@@ -521,6 +521,118 @@ div#all {
 
       <div class="view view-first">
         <img src="../images/albulm/fdfd.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/vv.jpg">
+        <div class="mask">
+          <h2>The Brobecks - Violent Things (2009)</h2>
+          <p>Favorite songs: Goodnight Socialite, Better Than Me, Second Boys Will Be First Choice, Small Cuts, I Will Tonight, Visitation Of The Ghost</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/2.png">
+        <div class="mask">
+          <h2>Akira Yamaoka - Silent Hill 2 OST (2001)</h2>
+          <p>Favorite songs: Theme Of Laura, The Darknness That Lurks In Our Mind, Laura Plays THe Piano</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/qw.jpg">
+        <div class="mask">
+          <h2>Joe Iconis - Be More Chill (2015)</h2>
+          <p>Favorite songs: More Than Survive, The Squip Song, A Guy That I'd Kinda Be Into, Loser Geek Whatever, Michael In The Bathroom, The Pants Song, Voices In My Head</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/fff.jpg">
+        <div class="mask">
+          <h2>Asian Kung-Fu Generation - Hōkai Amplifier (2002)</h2>
+          <p>Favorite songs: Haruka Kanata, Ao No Uta</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
+        <div class="mask">
+          <h2>Snow Patrol - Eyes Open (2005)</h2>
+          <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/.jpg">
         <div class="mask">
           <h2>Snow Patrol - Eyes Open (2005)</h2>
           <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
