--- a/projects/deskless/index.html
+++ b/projects/deskless/index.html
@@ -21,6 +21,7 @@
         <div class="main">
                 <br><h2>Deskless Kbd-Mouse</h2><br><br>
                 <img src="../../images/projects/deskless/5.jpg" width="400px"><br><br>
+                <p>(p.s. not my legs)</p><br>
                 <h1>Beginnings</h1><br>
                 <p>reddit, where all good inspiration starts (besides p*nterest but we don't talk about that.)
                 i saw a post by u/HardAsMagnets, and immediately i knew i needed one.
