--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">ani-notes</a>
+    <a href="/randomlove" class="navi"><img src="images/nav/flow.png">random love</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">ani-me</a>
     <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">code</a>
     <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">video-games</a>
 
