--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -54,7 +54,7 @@
 
 
 
-		<div id="content">
+		<div id="ccontent">
             <img class="auditorium" src="../images/randomlove/characters/a.jpg" style="width: 160px;"/>
 						<br><br><h3>Characters----------</h3>            <ol class="playlist_info">
 							<li>characters i adore <</li><br>
@@ -68,16 +68,26 @@
 
 
 
-		<div id="content">
-            <img class="auditorium" src="../images/randomlove/musicals/1.jpg" style="width: 160px;"/>
-						<br><br><h3>Musicals----------------</h3>            <ol class="playlist_info">
-							<li>musicals i adore <</li><br>
+		<div id="ccontent">
+            <img class="auditorium" src="../images/randomlove/books/2.jpg" style="width: 160px;"/>
+						<br><br><h3>Books----------------</h3>            <ol class="playlist_info">
+							<li>books i adore <</li><br>
             </ol>
-						<a href="/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+						<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
         </div>
 
+
+				<div id="ccontent">
+								<img class="auditorium" src="../images/randomlove/musicals/w.jpg" style="width: 160px;"/>
+								<br><br><h3>Musicals----------------</h3>            <ol class="playlist_info">
+									<li>musicals i adore <</li><br>
+								</ol>
+								<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+
+
+						</div>
 
 
         <div id="site_entry">
