--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -61,14 +61,14 @@
             </ol>
 						<a href="/randomlove/characters" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
-          
+
         </div>
 
 
 
 		<div id="ccontent">
             <img class="auditorium" src="../images/randomlove/books/2.jpg" style="width: 160px;"/>
-						<br><br><h3>Books----------------</h3>            <ol class="playlist_info">
+						<br><br><h3>Books-----------------------</h3>            <ol class="playlist_info">
 							<li>books i adore <</li><br>
             </ol>
 						<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
@@ -86,6 +86,21 @@
 
 
 						</div>
+
+
+						<div id="ccontent">
+										<img class="auditorium" src="../images/randomlove/shoppinglist/1.jpg" style="width: 160px;"/>
+										<br><br><h3>Shopping List-------</h3>            <ol class="playlist_info">
+											<li>things i need to buy <</li><br>
+										</ol>
+										<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+
+
+								</div>
+
+
+
+
 
 
         <div id="site_entry">
